fixed overflow of autofill phrase entries being hidden in clause box

--- a/public/css/mainStyle.css
+++ b/public/css/mainStyle.css
@@ -173,6 +173,10 @@ input, textarea {
   color: inherit;
 }
 
+.collection {
+  overflow: inherit;
+}
+
 @media print {
   nav, footer {
     display: none;
